fixed layout issues with the landing page

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -199,6 +199,14 @@ footer{
     width: 100%;
 }
 
+.adoption-story {
+    margin: 5% 0 15% !important;
+}
+
+.adoption-img{
+    border-radius: 5%!important;
+}
+
 .why-adopt-1, .why-adopt-2, .why-adopt-3{
     width: 100%;
 }
@@ -207,18 +215,23 @@ footer{
     width: 100%;
 }
 
+@media (max-width: 320px) {
+    .carousel-img{
+        margin: 0 4%;
+        padding: 0 2%;
+    }
 
-
+}
 
 @media (min-width: 768px) {
     .adoption-img {
         flex: 1;
-        max-width: 50%;
+        max-width: 40%;
     }
 
     .adoption-story{
         flex: 1;
-        max-width: 50%;
+        max-width: 60%;
     }
 
     .why-adopt-1, .why-adopt-2, .why-adopt-3 {
@@ -228,14 +241,17 @@ footer{
 
     .carousel-text{
         flex: 1;
-        max-width: 40%;
+        max-width: 60%;
     }
 
     .carousel-img{
         flex: 1;
-        max-width: 60%;
+        max-width: 30%;
     }
 
+    .adoption-story {
+        margin: 2% 0!important;
+    }
 }
 
 
@@ -255,19 +271,31 @@ footer{
         max-width: 25%;
     }
 
-    .carousel-img{
-        flex: 1;
-        max-width: 30%;
-    }
-
     .carousel-text{
         flex: 1;
-        max-width: 40%;
+        max-width: 50%;
+    }
 
+    .carousel-img{
+        flex: 1;
+        max-width: 20%;
     }
 
     .grid-container{
         height: 70vh;
+    }
+
+
+}
+
+@media (min-width: 1200px) {
+    .carousel-img{
+        max-width: 20%;
+    }
+
+    .carousel-text{
+        max-width: 40%;
+
     }
 }
 
